Changes
=======

1.0.9 ()
--------

Bug fixes:

- WEBP has been added to the Compression enum. Exploitation of this new
  compression mode will require GDAL 2.4.
- Rasterio now check for two AWS environment variables before creating a
  session (#1494).
- The ensure_env_with_credentials decorator which wraps rasterio.open will no
  longer clobber the credentials in a surrounding environment or seek
  credentials when they already exist (#1507).
- The comparison of CRS objects to dicts and strs that we pledged to remove at
  1.0 has at last been removed (#1492).

1.0.8 (2018-10-02)
------------------

Bug fixes:

- Datasets contained in MemoryFile buffers are now opened in r+ or w+ mode
  instead of r or w.
- The namedtuple _asdict method is overridden in BoundingBox to work around a
  bug in Python 3.4.3 (#1486, #1488). This unblocks creation of manylinux1
  wheels for Python 3.4.

1.0.7 (2018-09-26)
------------------

Bug fixes:

- Use the non-resolving path form of files_inout_arg in rio-convert and
  rio-shapes (#999).
- Filling the empty regions of boundless reads was too slow in some cases and
  a faster solution has been found (#1480).
- Require cligj>=0.5 for compatibility with click 7.0.
- Precisely specify CLI option and argument names for click 6.x and 7.0
  compatibility.

1.0.6 (2018-09-24)
------------------

Bug fixes:

- If the build_overviews method of a dataset is passed a list of factors that
  specify more than one 1x1 pixel overview (#1333), Rasterio raises an
  exception.
- Calling calculate_default_transform for large extents should no longer result
  in the out of memory error reported in #1131. The rio-warp command should
  also now run more quickly and with a smaller memory footprint.
- We have a more general fix for the problem of filling the empty regions of
  boundless reads (#1471).

1.0.5 (2018-09-19)
------------------

Bug fixes:

- The fill value for boundless reads was ignored in Rasterio versions 1-1.0.4